[TASK] update text-info

--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -20,9 +20,8 @@ $color-background-copyright: #252525;
 $color-header: #252525;
 $color-body: #515151;
 $color-body-copyright: #ffffff91;
-$color-secondary: #bf9f68;
-$color-primary: #c59d5f;
-$color-primary-dark: #8d7144;
+$color-primary: #bf9f68;
+$color-secondary: #ac6a30;
 $color-error: #d50042;
 
 // transition
