[TASK] update contact page and update color for lighthouse score

--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -21,7 +21,7 @@ $color-header: #252525;
 $color-body: #515151;
 $color-body-copyright: #ffffff91;
 $color-primary: #bf9f68;
-$color-secondary: #ac6a30;
+$color-secondary: #b95a2e;
 $color-error: #d50042;
 
 // transition
