[TASK] refactor fonts

--- a/src/assets/style/_typo.scss
+++ b/src/assets/style/_typo.scss
@@ -6,49 +6,49 @@
   font-family: 'Cabin';
   font-weight: 400;
   font-display: swap;
-  src: url('/fonts/Cabin-Regular.ttf') format('truetype');
+  src: url('@/assets/fonts/Cabin-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Cabin';
   font-weight: 500;
   font-display: swap;
-  src: url('/fonts/Cabin-Medium.ttf') format('truetype');
+  src: url('@/assets/fonts/Cabin-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Cabin';
   font-weight: 700;
   font-display: swap;
-  src: url('/fonts/Cabin-Bold.ttf') format('truetype');
+  src: url('@/assets/fonts/Cabin-Bold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'SourceSans3';
   font-weight: 400;
   font-display: swap;
-  src: url('/fonts/SourceSans3-Regular.ttf') format('truetype');
+  src: url('@/assets/fonts/SourceSans3-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'SourceSans3';
   font-weight: 500;
   font-display: swap;
-  src: url('/fonts/SourceSans3-Medium.ttf') format('truetype');
+  src: url('@/assets/fonts/SourceSans3-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'SourceSans3';
   font-weight: 700;
   font-display: swap;
-  src: url('/fonts/SourceSans3-Bold.ttf') format('truetype');
+  src: url('@/assets/fonts/SourceSans3-Bold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'HerrVonMuellerhoff';
   font-weight: 400;
   font-display: swap;
-  src: url('/fonts/HerrVonMuellerhoff.ttf') format('truetype');
+  src: url('@/assets/fonts/HerrVonMuellerhoff.ttf') format('truetype');
 }
 
 body {
